# ffmpeg-vbr-measures

./: .gitignore  CMakeLists.txt  README  main.c
CMakeModules/: FindFFMPEG.cmake
